# MiscDocs_PPGCC

./: LEIA-ME.docx  README.md  minhaUFMG.md
Files/: 2025.1 - Cronograma de atividades - JV.xlsx  FAQ.md  Locais do ônibus Interno.md  Professores.md  README.md  RoadmapMestrado.md  benefícios.md  calculo de notas.md  email.md
Files/Bolsas/: 20221220-Resolução UFMG-CEPE 07-2022.md  Formulário Contratação Bolsa PESQUISA e EXTENSÃO.doc  Formulário Contratação Bolsa PESQUISA e EXTENSÃO.docx  L13709compilado.html  Termo De Concessão De Bolsa Acadêmica Para Estudante De Pós-Graduação Da UFMG.md
Files/Buscando Orientador/: Professores.md  sala_e_ramal_scraping.ipynb
Files/CEU/: readme.md
Files/DACompSI/: Carta-proposta da chapa Refatora - DACompSi.docx  [Publico] Carta-Proposta Chapa ._Compila.docx
Files/Disciplinas/: 20250626-Disciplinas.md  2026_1-20260301.md  Anotações Aula Inaugural.md  Disciplinas - 20240910.md  Disciplinas 2024 - UFMG.xlsx  Disciplinas.md  Ofertas de Disciplinas - UFMG PPGCC (2).xlsx  Ofertas de Disciplinas - UFMG PPGCC - Secretaria.xlsx  Ofertas de Disciplinas - UFMG PPGCC.xlsx  Ofertas de Disciplinas- UFMG PPGCC.xlsx  readme.md
Files/Documentos/: FormlarioInscricao.doc  FormlarioInscricao.docx  auxilio.docx
Files/Empresas/: 20260519 - Entrevista da Globo com o Nivio Ziviani.md  readme.md
Files/POSCOMP/: readme.md
Files/Palestras/: 20240923 - 2024.2 - Anotações Aula Inaugural.md  20251028 - NVIDIA.md  (+7 more)
Files/Palestras/FireUAI/CTF-Kaspersky/sleepy_cucumber/: nn_model_secure_dill.pkl  open_pickle (2).ipynb  open_pickle.ipynb  pyproject.toml
(+13 files in other folders)
